[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "engine"

[dependencies]
uniffi = { version = "0.25.3", features = [ "cli" ] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rtc-stun = "0.9.0"
rtc-shared = "0.9.0"
bytes = "1"
sansio = "1"
quinn = "0.11.11"
rustls = "0.23.42"
rcgen = "0.14.8"
anyhow = "1.0.103"
serde = "1.0.228"
sha2 = "0.10"
hex = "0.4"
x509-parser = "0.18.1"
