[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "engine"

[dependencies]
uniffi = { version = "0.25.3", features = ["build", "cli"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rtc-stun = "0.9.0"
rtc-shared = "0.9.0"
bytes = "1"
sansio = "1"
quinn = "0.11.11"
rcgen = "0.14.8"
anyhow = "1.0.103"
serde = "1.0.228"
sha2 = "0.10"
hex = "0.4"
x509-parser = "0.18.1"
redb = "4.1.0"
uuid = "1.24.0"
serde_json = "1.0.150"
thiserror = "2.0.19"
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
log = "0.4.33"
simplelog = "0.12.2"
rustls = { version = "0.23.42", features = ["ring"] }

